# monopoly

./: LICENSE  README.md  action_card_popup.py  main.py  monopoly_two_players.py  pyproject.toml  screen_title.py  settings_characters_page.py  settings_page.py
3d_model_from_obj/: main.py
assets/: bg_fill.xcf  world.xcf
assets/shaders/: blur.frag  blur.vert
procedural_textures/: main.py
